--- a/web/host.html
+++ b/web/host.html
@@ -3,8 +3,12 @@
 
 <head>
 <meta charset="utf-8">
-<script type="text/javascript" src="brython.js"></script>
-<script type="text/javascript" src="brython_stdlib.js"></script>
+
+<!-- Brython -->
+<!-- <script type="text/javascript" src="brython.js"></script>
+<script type="text/javascript" src="brython_stdlib.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.10.6/brython.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.10.6/brython_stdlib.min.js"></script>
 
 <!--  w3css -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
