--- a/web/serve.html
+++ b/web/serve.html
@@ -9,7 +9,9 @@
 <!--  w3css -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Ícones -->
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <style>
     body, html {
@@ -19,6 +21,9 @@
     .server-box {
             padding: 15px;
             border-radius: 5px;
+        }
+    .w3-hover-pointer:hover {        
+        cursor: pointer;
         }
 </style>
 
